# law-citation-skill

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SKILL.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: test.yml
agents/: openai.yaml
references/: bluebook_rules.md
scripts/: __init__.py  package_agent_skill.py  run_pipeline.py
scripts/core/: __init__.py  bluebook.py  classifier.py  extractor.py  ooxml.py  patcher.py  supra.py  verifier.py
skills/citation-checker/: SKILL.md
skills/citation-checker/agents/: openai.yaml
skills/law-citation-skill/: SKILL.md
tests/: installed_cli_smoke.py  test_pipeline.py
tests/fixtures/: README.md  word_style_footnotes.docx
