[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "law-citation-skill"
version = "1.0"
description = "Portable Claude/OpenAI agent skill for auditing legal citation footnotes in Word documents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Citation Checker Skill Maintainers" },
]
keywords = ["agent skills", "claude", "codex", "openai", "legal citations", "bluebook", "docx", "footnotes"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Legal Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: XML",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/aaronbrynildson/law-citation-skill"
Repository = "https://github.com/aaronbrynildson/law-citation-skill"
Issues = "https://github.com/aaronbrynildson/law-citation-skill/issues"

[project.scripts]
law-citation-skill = "citation_checker_skill.run_pipeline:main"

[tool.setuptools]
packages = ["citation_checker_skill", "citation_checker_skill.core"]

[tool.setuptools.package-dir]
citation_checker_skill = "scripts"
"citation_checker_skill.core" = "scripts/core"
